--- a/yariapp/templates/home.html
+++ b/yariapp/templates/home.html
@@ -158,7 +158,9 @@
             <img src="{% static 'images/children.svg' %}" alt="User Icon" st> ADD BABY ARRIVAL
         </a>
     </div>
-    
+   <div>
+    <img src="{% static 'images/arrow.svg' %}" alt="User Icon" width="30" height="30"><strong> Our Daily Records</strong>
+   </div>
     <div>  
         <footer class="bg-body-tertiary text-center">
           <div>
