--- a/yariapp/templates/depature_list.html
+++ b/yariapp/templates/depature_list.html
@@ -119,7 +119,7 @@ tbody tr:last-child td {
           <a href="{%url 'payment_list' %}"><strong>Babies</strong></a>
         </div>
       <li><a href="{% url 'shop_list' %}"><strong>Manage Shop</strong></a></li>
-      <li><a href="{% url 'pro_list' %}"><strong>Manage Procuremen</strong>t</a></li>
+      <li><a href="{% url 'pro_list' %}"><strong>Manage Procurement</strong></a></li>
   </ul>
 </div>
     <div class="container">
