--- a/yariapp/templates/onduty.html
+++ b/yariapp/templates/onduty.html
@@ -5,7 +5,7 @@
    
 <style>
 
-   body {
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -34,7 +34,7 @@ color: #392A48;
 
 
     }
-    .container input[type="text"],
+.container input[type="text"],
 .container input[type="age"],
 .container input[type="password"] {
     background-color: transparent !important;
@@ -116,19 +116,20 @@ color: #392A48;
           <a href="{%url 'payment_list' %}"><strong>Babies</strong></a>
         </div>
       <li><a href="{% url 'shop_list' %}"><strong>Manage Shop</strong></a></li>
-      <li><a href="{% url 'pro_list' %}"><strong>Manage Procuremen</strong>t</a></li>
+      <li><a href="{% url 'pro_list' %}"><strong>Manage Procurement</strong></a></li>
   </ul>
 </div>
 <div class ="container">
     <h3 style="text-align: center;"> 
-        <strong>Sitters On Duty form</strong>
+        <strong>On Duty Form</strong>
     </h3>
-    <form method="post" div class="sitter">
-        
-    {% csrf_token %}
-    {{ form | crispy }}
-    <button type="submit" css_class="btn btn-primary" style=" width: 100%;padding:10px; border:none;background-color: #392A48;border-radius: 5px; color: #fff;cursor: pointer;text-align: center;height: 50px;margin-top: 30px;">Submit</button>
-</form>   
-</div>
-
-{% endblock %}
+    <form method="post" class="sitter">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <br>
+        <div class="car">
+        <button type="submit"style="width: 100%; padding: 10px; border: none; background-color: #392A48; border-radius: 5px; color: #fff; cursor: pointer; height: 50px; margin-top: 1px;margin-left:90px;">Submit</button>
+        </div>
+    </form>
+</div>    
+{%endblock %}
