--- a/yariapp/templates/payment.html
+++ b/yariapp/templates/payment.html
@@ -116,7 +116,7 @@ color: #392A48;
           <a href="{%url 'payment_list' %}"><strong>Babies</strong></a>
         </div>
       <li><a href="{% url 'shop_list' %}"><strong>Manage Shop</strong></a></li>
-      <li><a href="{% url 'pro_list' %}"><strong>Manage Procuremen</strong>t</a></li>
+      <li><a href="{% url 'pro_list' %}"><strong>Manage Procurement</strong></a></li>
   </ul>
 </div>  
 <div class ="container">
